# affinecal

./: README.md  pyproject.toml
docs/: README.md
src/affinecal/: __init__.py  __main__.py  losses.py  model.py  trainer.py  utils.py
src/affinecal/scripts/: predict.py  train.py
tests/: test.py
tests/expected_cost/: calibration.py  psrcal_wrappers.py
tests/expected_cost/psrcal/: calibration.py  losses.py
tests/expected_cost/psrcal/optim/: example.py
