[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "affinecal"
version = "0.1.0"
description = "Affine calibration for classification models based on pytorch"
readme = "README.md"
requires-python = ">=3.6"
license = {file = "LICENSE"}
keywords = ["calibration", "classification", "pytorch", "proper scoring rules"]
authors = [
    {name = "Lautaro Estienne", email = "lestienne@fi.uba.ar"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy",
    "torch",
    "fire",
]

[project.urls]
homepage = "https://github.com/LautaroEst/affinecal"
documentation = "https://github.com/LautaroEst/affinecal/docs"

[project.scripts]
affinecal = "affinecal.__main__:main"
